# jupyterlite

./: README.md  Taskfile.yaml  pyproject.toml  requirements.txt
content/: Colour - verify XYZ to sRGB.ipynb  Colour checkers(2).ipynb  Colour checkers.ipynb  Using colour module.ipynb
