[tool.poetry]
name = "jupyterlite"
version = "0.1.0"
description = "Local Jupyterlite"
authors = ["Humphrey Drummond <hum3@drummond.info>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
bqplot = "^0.12.37"
colour-science = "^0.4.2"
ipycanvas = ">=0.9.1"
ipyevents = ">=2.0.1"
ipyleaflet = "^0.17.2"
ipympl = ">=0.8.2"
ipywidgets = ">=8.0.0,<9"
jupyterlab = ">=3.5.1,<3.6.0"
jupyterlab-language-pack-fr-fr = "^3.6.post1"
jupyterlab-language-pack-zh-cn = "^3.6.post1"
jupyterlab-fasta = ">=3,<4"
jupyterlab-geojson = ">=3,<4"
jupyterlab-tour = "^3.1.4"
jupyterlab-miami-nights = "^0.3.2"
jupyterlite-core = "0.1.0b19"
jupyterlite-pyodide-kernel = "0.0.5"
jupyterlite-p5-kernel = "0.1.0"
jupyterlite-xeus-lua = "0.3.1"
jupyterlite-xeus-sqlite = "0.2.1"
plotly = ">=5,<6"
jupyterlab-night = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
